fix(top-bar): fixed overflow-items usage

--- a/packages/components/top-bar/top-bar.scss
+++ b/packages/components/top-bar/top-bar.scss
@@ -33,6 +33,7 @@
 
     .kbq-top-bar-container__with-overflow-items {
         gap: unset;
+        justify-content: unset;
         padding: 1px;
 
         > .kbq-overflow-item {
